2004-03-25  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_string.c (bk_string_registry_insert): support for
	BK_STR_REGISTRY_FLAG_FORCE

2004-02-21  Seth Robertson  <seth@sysdetect.com>

	* src/genrand.c: Generate random powerball numbers:
	{ ./genrand -s 5 -n 52 | sort -n; ./genrand -s 1 -n 52; } |
	awk '{sum=;sum++; print	sum;}'

2004-02-16  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_rand.c (USE_MEM_ENTROPY): enable use of uninitialized memory
	for extra entropy only if neither Insure nor Valgrind are around
	
2004-02-11  Seth Robertson  <seth@sysdetect.com>

	* lib/b_stats.c: Talk about how to improve accuracy

2004-02-09  Seth Robertson  <seth@pearl.sysdetect.com>

	* include/libbk_net.h (BAKA_TCPHDR_FLAGECE|FLAGCWR): Add "new" RFC
	flags

2004-02-05  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_string.c (bk_memdiff): #2904: use u_char comparison

2004-02-05  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_string.c (bk_memdiff): #2904: workaround using memcmp

	* xml/b_search.c (bkxml_nodesearch): Actually set *last like we
	say we will

2004-01-29  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_cksum.c (bk_in_cksum): Simplify interface

2004-01-28  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_run.c (bk_run_once): Possibly required change for idle support.

2004-01-28  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_string.c (bk_string_expand): Look for expansions in
	bk_conf too.
	(bk_string_tokenize_split): Look for expansions in bk_conf if
	caller asks.

2004-01-27  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_run.c (bk_run_once): We were running the polling function
	twice instead of the idle functions.

2004-01-07  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_error.c (be_error_output): IF BK_ERROR_FLAG_MORE_FUN,
	print function stack track for every error.  Preferentially to
	file output (syslog is avoided unless necessary).

2004-01-06  Seth Robertson  <seth@buscemi.sysdetect.com>
